# gis-advisor

./: .gitignore  AI配置说明.md  LICENSE  README.md  pyproject.toml  start_web_utf8.ps1
autogis/: __init__.py  ai_analyzer.py  cli.py  competition_runner.py  data_inspector.py  env.py  executor.py  folder_scanner.py  guidance.py  history.py  knowledge_base.json  knowledge_base.py  llm_client.py  module_library.json  operation_catalog.py  planner.py  stat_checker.py  training_reflections.py  web_server.py  workflow.py  workflow_memory.py
autogis/web/: app.js  index.html  styles.css
autogis/web/locales/: zh-CN.json
data/: README.md
docs/: GIS模块库与界面端优化方案.md  README.md  湖南赛题完整运行问题复盘.md  转型方案_GIS题目分析与操作指导.md
docs/knowledge-base/: README.md  题型分类.md
docs/knowledge-base/操作指导/: README.md  缓冲区_ArcGIS.md  缓冲区_QGIS.md
docs/knowledge-base/检查清单/: README.md  缓冲区类.md
docs/系统设计/: README.md  产品定位.md  知识库与误判回归机制.md
docs/训练反思/: README.md  ts_模板.md
outputs/: README.md
scripts/: run_first_hunan_full.py
tests/: knowledge_regression.json  routing_regression.py
